--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,3 @@
-title: SaaS Metrics Pipeline with dbt
-description: A practical guide to modeling SaaS payments metrics using dbt and Snowflake
-theme: minima
-baseurl: "" # leave empty if hosted at root (username.github.io)
-url: "https://your-username.github.io" # replace with your GitHub Pages URL
-markdown: kramdown
-highlighter: rouge
-
-# Build settings
-plugins:
-  - jekyll-feed
-  - jekyll-seo-tag
-  - jekyll-sitemap
-
-exclude:
-  - node_modules
-  - vendor
-  - Gemfile
-  - Gemfile.lock
+title: Stratascratch
+show_downloads: true
+markdown: GFM
