--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-title: Stratascratch
+title: Designing the Staging Layer for SaaS Payment Metrics (MRR & ARR)
 show_downloads: true
 markdown: GFM
+theme: jekyll-theme-minimal
