--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 title: Designing the Staging Layer for SaaS Payment Metrics (MRR & ARR)
 show_downloads: true
-markdown: GFM
-theme: jekyll-theme-architect
+theme: jekyll-theme-cayman
